assets/custom.css
.preview {
  display: none !important;
}

/* Override detault balises */
html,
body {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  font-family: Verdana;
  font-size: 16px;
  font-weight: 400;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  outline: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Montserrat;
  font-weight: 700;
  margin: 0;
}

h1,
h2 {
  font-size: 3.75rem;
  line-height: 3.75rem;
}

h3 {
  font-size: 1.875rem;
}

h4 {
  font-size: 1.375rem;
}

@media only screen and (max-width: 768px) {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    text-align: left;
  }

  h1,
  h2 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }

  h3 {
    font-size: 1.25rem;
  }

  h4 {
    font-size: 1rem;
  }
}

div {
  scroll-margin-top: 5rem;
}

ul {
  margin: 0;
  padding: 0;
}

a,
a:hover {
  color: black;
  text-decoration: none;
}

p {
  font-size: 1rem;
  margin: 0;
}

@media only screen and (max-width: 768px) {
  p {
    font-size: 0.875rem;
  }
}

li {
  list-style-type: none;
}

address {
  font-style: normal;
}

.page {
  max-width: 1600px;
  margin: 0 auto;
}

.full-screen,
.banner {
  min-height: calc(100vh - 4.5rem);
}


.wrapper {
  padding: 6.25rem 8rem;
  width: 100%;
  margin: auto;
  overflow: hidden;
}

@media only screen and (max-width: 1024px) {
  .wrapper {
    padding: 4.75rem 2rem;
  }
}

@media only screen and (max-width: 768px) {
  .wrapper {
    padding: 2rem;
  }
}

/* CSS for text */

.plus {
  position: relative;
  margin-left: 3.25rem;
  /*makes text stay under the navbar*/
  z-index: -1;
}

.plus:before {
  content: '+';
  position: absolute;
  left: -3.5rem;
  text-align: left;
  font-size: 5rem;
}

@media only screen and (max-width: 768px) {
  .plus {
    margin-left: 2.25rem;
  }

  .plus:before {
    left: -2.5rem;
    font-size: 3.675rem;
  }
}

.text-light-grey {
  color: #787878;
}

.text-dark-grey {
  color: #5A5A5A;
}

.text-xl {
  font-size: 1.25rem;
}

.text-l {
  font-size: 1.125rem;
}

/* Class unused this is the default value */
.text,
.text-m {
  font-size: 1rem;
}

.text-s {
  font-size: 0.875rem;
}

.text-xs {
  font-size: 0.75rem;
}

/* CSS for Navigation Bar */
nav {
  position: sticky;
  top: 0;
  height: 4.5rem;
  padding: 1.25em;
  overflow: hidden;
  background: white;
}
nav .mobile-header {
  display: none;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  text-align: center;
  gap: 6.25rem;
  height: 2rem;
}

nav li {
  list-style-type: none;
  font-weight: 500;
}

nav li.menu-element a {
  display: inline-block;
  width: 6.25rem;
  padding: 2px;
  color: #787878;
  border: 2px solid transparent;
}

nav li.menu-element a:hover {
  color: black;
  border: 2px solid black;
  border-radius: 25px;
}


nav li:not(.menu-element) {
  display: none;
  width: 20px;
}

nav .logo {
  height: 2rem;
}

@media only screen and (max-width: 768px) {
  nav {
    background: white;
    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
    transition: box-shadow 0.3s linear 0s;
    display: flex;
    flex-direction: column;
    padding: 1.25rem 2rem
  }

  nav ul {
    display: none;
  }

  nav li:not(.menu-element) {
    display: none;
  }

  nav .mobile-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    justify-items: center;
  }

  nav .mobile-header img,
  nav .mobile-header svg {
    height: 2rem;
  }

  #navbar-x-icon {
    display: none;
  }

  nav.open {
    transition: all 0.5s ease-in-out 0s;
    height: 100vh;
  }

  nav.open #navbar-x-icon {
    display: block;
  }

  nav.open #navbar-bar-icon {
    display: none;
  }

  nav.open ul {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    align-items: center;
    gap: 2.75rem
  }

  nav li {
    font-size: 2rem;
  }

  nav li.menu-element a {
    width: 11rem;
  }
}
/* CSS for Banner */

.banner {
  display: flex;
}

.banner > div:first-child {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 2.75rem;
  max-width: 51rem;
  margin: auto;
}

.banner .title {
  font-size: 4.375rem;
  line-height: 4.375rem;
}

@media only screen and (max-width: 768px) {
  .banner > div:first-child {
    gap: 1.5rem;
  }

  .banner .title {
    font-size: 2.375rem;
    line-height: 2.375rem;
  }

  .banner h1,
  .banner h3,
  .banner p {
    width: 100%;
    text-align: left;
  }
}

.banner h3 {
  font-weight: 400;
}

.banner p {
  margin: auto;
}

#scroll-indicator {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  font-weight: 700;
  gap: 0.5rem;
  transform: rotate(90deg);
  position: fixed;
  bottom: 30%;
  left: 5%
}

#scroll-indicator.hidden {
  display: none;
}

@media only screen and (max-width: 768px) {
  .banner > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
    max-width: 100%;
    margin: auto;
  }

  .banner .logo {
    height: 3rem;
  }

  .banner .title {
    text-align: left;
    font-weight: bold;
    font-family: Montserrat;
  }

  #scroll-indicator {
    bottom: 10%
  }

  @media only screen and (max-height: 700px) {
    #scroll-indicator {
      transform: translateX(-1.5rem) rotate(90deg);
      left: 0;
    }
  }
}

/* CSS for Index Page  */

.cards {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: stretch;
  gap: 2.75rem;
  overflow-x: scroll;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 30%;
  min-width: 14rem;
  padding: 2rem;
  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.10);
}

.card img {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  margin-bottom: 2.5rem;
}

.card h4 {
  width: 100%;
  margin-bottom: 1rem;
}

@media only screen and (max-width: 1024px) {
  .card {
    padding: 1.5rem;
  }
}

@media only screen and (max-width: 768px) {

  .card img {
    display: none;
  }
}

.column-2 {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  grid-template-rows: 1fr;
  grid-template-areas: "content illustration";
  gap: 15%;
}

.column-2.reverse {
  grid-template-areas: "illustration content";
}

.column-2 .content {
  grid-area: content;
  display: flex;
  flex-direction: column;
  gap: 3.25rem;
}

.column-2 .content h2 {
  margin-bottom: 1.5rem;
}
.column-2 .content h3 {
  margin-bottom: 1.5rem;
}

.column-2 .illustration {
  overflow: hidden;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center top;
  grid-area: illustration
}

.column-2 .image-cover {
  overflow: hidden;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  grid-area: illustration
}

@media only screen and (max-width: 1024px) {
  .column-2 {
    gap: 5%;
  }
}

@media only screen and (max-width: 768px) {

  .column-2,
  .column-2.reverse {
    display: grid;
    grid-template-areas: "illustration" "content";
    grid-template-columns: 1fr;
    grid-template-rows: 15.75rem 1fr;
    gap: 2rem;
  }

  .column-2 .content {
    gap: 2.5rem;
  }

  .column-2 .content h2 {
    margin-bottom: 1rem;
  }

  .column-2 .content h3 {
    margin-bottom: 1.5rem;
  }

  .column-2 .illustration {
    background-position: center bottom;
  }

  .column-2 .image-cover {
    background-size: contain;
  }

}

.swiper {
  width: 100%;
}

.swiper-wrapper {
  -webkit-transition-timing-function: linear !important;
  -o-transition-timing-function: linear !important;
  transition-timing-function: linear !important;
}

/* CSS for Index Page - trusted-by */

#trusted-by {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 7rem;
}

#trusted-by .title span {
  display: flex;
  padding: 0.375rem 1.25rem;
  justify-content: center;
  align-items: center;
  border-radius: 1.25rem;
  color: #CACACF;
  border: 1px solid #CACACF;
}

#trusted-by .swiper {
  overflow: visible;
}

#trusted-by #brands {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 4rem
}
#trusted-by #brands .brand {
  height: 4rem;
}

#trusted-by .brand img {
  -webkit-filter: grayscale();
  filter: grayscale();
  display: block;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

@media only screen and (max-width: 768px) {

  #trusted-by {
    gap: 3.75rem;
  }

  #trusted-by #brands {
    gap: 3.75rem
  }

  #trusted-by #brands .brand {
    height: 2.875rem;
  }
}

/* CSS for Index Page - contact */

#contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2.5rem;
}

#contact h2,
#contact p {
  text-align: center;
}

#contact ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1.5rem 10rem;
  justify-content: center;
}

#contact img,
#contact svg {
  width: 5.25rem;
  height: 5.25rem;
  border-radius: 50%;
}

@media only screen and (max-width: 768px) {
  #contact ul {
    gap: 1.5rem 7rem;
  }
}

/* CSS for Website Footer */
footer {
  background-color: black;
}

footer p {
  margin: 0;
}

footer *,
footer a:hover {
  color: white;
}

#footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 2%;
  padding: 4em 8em;
  margin: auto;
  max-width: 1600px;
  line-height: 1.4;
}

#footer > div {
  flex-basis: 31%;
}

#footer #company-socials {
  display: flex;
  flex-direction: column;
  align-content: flex-start;
  flex-wrap: nowrap;
  justify-content: space-between;
}

#footer #social-icons {
  display: flex;
  flex-direction: row;
  gap: 0.75rem;
  color: white
}

#footer #social-icons svg {
  width: 1.5rem;
  height: 1.5rem;
}

#footer #social-icons svg path {
  fill: currentColor
}

#footer .logo {
  width: 7.75rem;
}

#footer .logo-mobile {
  height: 2rem;
  display: none;
}

#company-details a,
#credit a {
  text-decoration: underline;
}

#company-legals {
  min-width: 10rem;
}

#company-details {
  min-width: 18.5rem;
}

#credit {
  padding: 0.5em;
  text-align: center;
}

@media only screen and (max-width: 1024px) {
  #footer {
    padding: 3em 6em;
  }
}
@media only screen and (max-width: 768px) {

  #footer {
    display: flex;
    flex-direction: column;
    justify-content: start;
    gap: 2rem;
    padding: 2rem;
    margin: auto;
    line-height: 1.4;
  }

  #footer #company-socials {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
  }

  #footer .logo {
    display: none;
  }

  #footer .logo-mobile {
    display: inline-block;
    height: 3rem;
  }

  #company-details {
    min-width: 10rem;
  }

  #credit {
    padding: 0 2em 2rem 2rem;
    text-align: left;
    font-size: 14px;
  }
}

